3.1.3 (released xx.xx.xxxx)
  * Expand rar detection logic to all 7zip programs
    Thanks Alfred Wingate for the patch!

3.1.2 (released 14.02.2025)
  * Add workaround for an error using uv publish.

3.1.1 (released 14.02.2025)
  * Improved RAR support detection for the 7-Zip archiver.
    Closes: GH bug #175, #176
  * Enable file(1) detection of ALZ archives, and improved handling of RAR detection for file 5.46.
    Thanks Alfred Wingate for the patches!

3.1.0 (released 19.11.2024)
  * Added support for UDF (.udf) archives with 7z.
    Closes: GH bug #80
  * The options --quiet and --verbose are now mutually exclusive options.
  * When --quiet is given twice, output on stderr from archive commands is 
    suppressed. When using the API functions, set verbosity to -2.

3.0.3 (released 04.11.2024)
  * Fix UnicodeDecode errors when logging, especially on windows systems.
    Closes: GH bug #170
  * Added support for WIM (windows image) archives with 7z.
  * If the MIME database cannot detect the file type, check again with a lowercase filenanme extension.
  * Use 7z option -aou to rename files when extracting instead of overwriting them.
  * Use rar option -or to rename files when extracting instead of overwriting them.
  * Use rar option -kb to keep files when extracting broken RAR archives.

3.0.2 (released 21.10.2024)
  * When running in verbose mode (-vv), print mime and compression info.
  * Use official github command line client "gh" for releases.
  * Added type annotations.

3.0.1 (released 06.10.2024)
  * Use more uv command to replace other build tools, ie. twine.
  * Add new --quiet option to suppress command output.
  * Document that Windows needs a file program to be able to determine file types without extensions.
    Closes: GH bug #152

3.0.0 (released 25.09.2024)
  * When a program does not support a compression type, try to find other programs instead of failing.